[metadata]
name = mclbn256
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
mclbn256 = lib
